--- a/static/css/style.css
+++ b/static/css/style.css
@@ -46,7 +46,7 @@ footer {
     color: white;
     text-align: center;
     padding: 10px;
-    position: relative;
+    position: fixed;
     bottom: 0;
     width: 100%;
 }
