--- a/temple_app/templates/base.html
+++ b/temple_app/templates/base.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}Peaceful Harmony Temple{% endblock %}</title>
+    <title>{% block title %}Ulakudaya Perumal Temple{% endblock %}</title>
     
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -17,7 +17,7 @@
         <div class="container">
             <a class="navbar-brand" href="{% url 'temple_app:temple' %}">
                 <img src="{% static 'images/logo.png' %}" alt="Temple Logo" width="50" height="50">
-                Peaceful Harmony Temple
+                Ulakudaya Perumal Temple
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
@@ -50,7 +50,7 @@
     <!-- Footer -->
     <footer class="bg-dark text-white text-center py-3 mt-4">
         <div class="container">
-            <p>&copy; {% now "Y" %} Peaceful Harmony Temple. All Rights Reserved.</p>
+            <p>&copy; {% now "Y" %} Ulakudaya Perumal Temple. All Rights Reserved.</p>
         </div>
     </footer>
 
