--- a/temple_app/templates/base.html
+++ b/temple_app/templates/base.html
@@ -28,7 +28,7 @@
                         <a class="nav-link" href="{% url 'temple_app:temple' %}">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">About</a>
+                        <a class="nav-link" href="{% url 'temple_app:about' %}">About</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Events</a>
