--- a/temple_app/templates/temple/about.html
+++ b/temple_app/templates/temple/about.html
@@ -56,7 +56,7 @@
     <h2 class="text-center mb-4">Visit Us</h2>
     <div class="ratio ratio-16x9">
         <iframe 
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3946.2220680216597!2d77.002579684765!3d8.477775275636986!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b05ba830ecbf943%3A0xc7fea459e22a51dd!2sSree%20Ulakudaya%20Perumal%20Thamburan%20Temple!5e0!3m2!1sen!2sus!4v1733593615319!5m2!1sen!2sus" 
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3943.9469300830674!2d76.73546987934569!3d8.696589999999995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b05e953eca72683%3A0x2e91cb40372340a4!2sViduthi%20Ulakudaya%20Perumal%20Temple!5e0!3m2!1sen!2sin!4v1733594801129!5m2!1sen!2sin"
             allowfullscreen="" 
             loading="lazy"
             class="border-0 rounded"
