--- a/static/css/style.css
+++ b/static/css/style.css
@@ -15,6 +15,12 @@ header {
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
 }
 
+html, body {
+    height: 100%;
+    margin: 0;
+    overflow: scroll; /* Disable scrolling */
+  }
+
 header h1 {
     margin: 0;
     font-size: 2.5em;
@@ -156,3 +162,5 @@ footer a:hover {
     right: 10px;
     cursor: pointer;
 }
+
+  
