--- a/static/css/style.css
+++ b/static/css/style.css
@@ -18,7 +18,6 @@ header {
 html, body {
     height: 100%;
     margin: 0;
-    overflow: scroll; /* Disable scrolling */
   }
 
 header h1 {
@@ -162,10 +161,9 @@ footer a:hover {
     right: 10px;
     cursor: pointer;
 }
-.row {
-
+/* .row {
     display: block;
-}
+} */
 
 .lead {
     font-size: large;
@@ -174,4 +172,10 @@ footer a:hover {
 .lead.mb-4 {
     font-family: cursive; /* Use a generic cursive font */
     font-style: italic; /* Makes the font italic */
+}
+
+.contact-divider {
+    border-left: 2px solid #ccc;
+    height: 100%;
+    display: block !important;            /* Ensure it's not hidden */
 }
