--- a/static/css/style.css
+++ b/static/css/style.css
@@ -47,13 +47,13 @@ main {
 }
 
 footer {
-    background-color: #333;
-    color: white;
-    text-align: center;
-    padding: 10px;
-    position: relative;
-    bottom: 0;
-    width: 100%;
+    background-color: #333 !important;
+    color: white !important;
+    text-align: center !important;
+    padding: 10px !important;
+    position: relative !important;
+    bottom: 0 !important;
+    width: 100% !important;
 }
 
 footer a {
