--- a/static/css/style.css
+++ b/static/css/style.css
@@ -194,3 +194,25 @@ footer a:hover {
     background-color: rgba(237, 242, 242, 0.3); /* Light gray with increased opacity */
     color: black; /* Change text color to black */
 }
+
+/* Enhanced navbar for mobile */
+.navbar {
+    padding: 0.5rem 1rem;
+}
+
+.navbar-brand img {
+    height: 25px;
+}
+
+.navbar-toggler {
+    padding: 0.4rem 0.6rem;
+    font-size: 1rem;
+}
+
+.navbar-nav {
+    padding: 0.5rem 0;
+}
+
+.nav-link {
+    padding: 0.5rem 1rem;
+}
