--- a/static/css/style.css
+++ b/static/css/style.css
@@ -204,6 +204,10 @@ footer a:hover {
     height: 25px;
 }
 
+.navbar-brand img:hover {
+    transform: scale(1.1);
+}
+
 .navbar-toggler {
     padding: 0.4rem 0.6rem;
     font-size: 1rem;
